ludo game files added
Signed-off-by: ayushdip <ayush.dip.eee17@itbhu.ac.in>

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script async defer src="JsIntro.js"></script>
+    <link rel="stylesheet" href="sty.css">
 </head>
 <body>
-    <h1>Static file</h1>
-    <p>Hosted from backend</p>
+    <canvas id="mycanvas" width="450" height="450"></canvas>
+    <button id = "btn" onclick="roledice()">Role a Dice</button>
+    <div id = "showdice"></div>
+    <div id = "chance"></div>
+    <div id = "result"></div>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script async defer src="JsIntro.js"></script>
+    <link rel="stylesheet" href="sty.css">
+</head>
+<body>
+    <canvas id="mycanvas" width="450" height="450"></canvas>
+    <button id = "btn" onclick="roledice()">Role a Dice</button>
+    <div id = "showdice"></div>
+    <div id = "chance"></div>
+    <div id = "result"></div>
 </body>
 </html>
